[gd_scene load_steps=5 format=2]

[ext_resource path="res://menu/MenuButton.gd" type="Script" id=1]
[ext_resource path="res://recursos/fontes/ChiKareGo2.ttf" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=1]
size = 72
font_data = ExtResource( 2 )

[sub_resource type="Theme" id=2]
default_font = SubResource( 1 )

[node name="TextureButton" type="TextureButton"]
theme = SubResource( 2 )
script = ExtResource( 1 )

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_right = 1.0
margin_bottom = 14.0
alignment = 1

[node name="SelectedText" type="Label" parent="HBoxContainer"]
margin_right = 32.0
margin_bottom = 68.0
rect_min_size = Vector2( 32, 0 )
align = 1
__meta__ = {
"_editor_description_": ""
}

[node name="TitleButton" type="Label" parent="HBoxContainer"]
margin_left = 36.0
margin_right = 392.0
margin_bottom = 68.0
rect_min_size = Vector2( 190, 0 )
text = "Text Button"

[connection signal="focus_entered" from="." to="." method="_on_TextureButton_focus_entered"]
[connection signal="focus_exited" from="." to="." method="_on_TextureButton_focus_exited"]
[connection signal="mouse_entered" from="." to="." method="_on_TextureButton_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_TextureButton_mouse_exited"]
